--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>  
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
